<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RemoveActivity"
    android:background="#280040">

    <ImageView
        android:id="@+id/img_close_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53sp"
        android:layout_marginRight="6sp"
        android:padding="10sp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView
        android:id="@+id/tv_title_remove"
        android:text="@string/tv_title_remove"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView

        android:id="@+id/tv_title_remove1"
        android:text="@string/tv_title_remove1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_remove"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView

        android:id="@+id/tv_weekly"
        android:text="@string/tv_weekly_premium"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView
        android:id="@+id/tv_description"
        android:text="@string/tv_disable_all_ads_for_a_week"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weekly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_price"
        />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView
        android:id="@+id/tv_price"
        android:text="@string/tv_price"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layout"
        />
    <ImageView
        android:id="@+id/layout"
        android:background="@drawable/ic_background_weekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_remove1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
      />

    <ImageView
        android:id="@+id/layout1"
        android:background="@drawable/ic_background_monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView

        android:id="@+id/tv_monthly"
        android:text="@string/tv_monthly"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout1"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView

        android:id="@+id/tv_description1"
        android:text="@string/tv_disable_all_ads_for_a_monthly"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_monthly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_price1"
        />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView

        android:id="@+id/tv_price1"
        android:text="@string/tv_price1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layout1"
        />

    <ImageView
        android:id="@+id/brackground_fire"
        android:background="@drawable/ic_ellipse_samll"
        app:layout_constraintTop_toTopOf="@id/layout1"
        app:layout_constraintStart_toStartOf="@+id/layout1"
        android:layout_marginTop="-20dp"
        android:layout_marginLeft="-20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_marginBottom="3sp"
        android:layout_marginRight="3sp"
        android:id="@+id/fire"
        android:background="@drawable/ic_lua"
        app:layout_constraintBottom_toBottomOf="@id/brackground_fire"
        app:layout_constraintEnd_toEndOf="@id/brackground_fire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/layout2"
        android:background="@drawable/ic_background_yearly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView

        android:id="@+id/tv_yearly"
        android:text="@string/tv_yearly"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout2"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView
        android:id="@+id/tv_description2"
        android:text="@string/tv_disable_all_ads_for_a_yearly"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_yearly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_price2"
        />
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView

        android:id="@+id/tv_price2"
        android:text="@string/tv_price2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layout2"
        />

    <ImageView
        android:id="@+id/brackground_fire1"
        android:background="@drawable/ic_ellipse_big"
        app:layout_constraintTop_toTopOf="@id/layout2"
        app:layout_constraintStart_toStartOf="@+id/layout2"
        android:layout_marginTop="-25dp"
        android:layout_marginLeft="-25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/fire1"
        android:background="@drawable/ic_lua1"
        app:layout_constraintTop_toTopOf="@id/brackground_fire1"
        app:layout_constraintBottom_toBottomOf="@id/brackground_fire1"
        app:layout_constraintStart_toStartOf="@id/brackground_fire1"
        app:layout_constraintEnd_toEndOf="@id/brackground_fire1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>