<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    >
    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/brackground_dialog"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldTextView
        android:id="@+id/tv_rate_your_experience"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/tv_rate_your_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ratingbar_rate"/>

    <RatingBar
        style="@style/customRatingBar"
        android:id="@+id/ratingbar_rate"
        android:stepSize="1"
        android:numStars="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_your_experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_no_later"/>

    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldButton
        android:background="@drawable/ic_button_dialog_close"
        android:id="@+id/bt_no_later"
        android:text="@string/tv_no_later"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ratingbar_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_rate_now"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.example.fingerprintscandailytarot.custom_textview.RestoraNeueExtraBoldButton
        android:background="@drawable/ic_button_dialog_ok"
        android:id="@+id/bt_rate_now"
        android:text="@string/tv_rate_now"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ratingbar_rate"
        app:layout_constraintStart_toEndOf="@id/bt_no_later"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>