<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingActivity"
    android:background="@color/history">

<!--    <Button-->
<!--        android:id="@+id/img_close"-->
<!--        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"-->
<!--        android:layout_width="54dp"-->
<!--        android:layout_height="53dp"-->

<!--        android:layout_marginTop="53sp"-->
<!--        app:icon="@drawable/ic_close"-->
<!--        app:iconTint="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6sp"
        android:padding="10sp"
        android:src="@drawable/ic_close"
        android:layout_marginTop="53sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="15dp">
        <ImageView
            android:id="@+id/img_language"
            android:scaleType="centerCrop"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16sp"
            android:src="@drawable/ic_america"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView
            android:id="@+id/tv_name_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:text="@string/tv_language"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/img_language"
            app:layout_constraintStart_toEndOf="@id/img_language"
            app:layout_constraintTop_toTopOf="@id/img_language" />
        <ImageView
            android:id="@+id/img_arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_name_language"
            app:layout_constraintStart_toEndOf="@id/tv_name_language"
            app:layout_constraintTop_toTopOf="@id/tv_name_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_language" />
    <LinearLayout
        android:id="@+id/ll_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lv_language"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <ImageView
            android:id="@+id/img_icon_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_remove_ads"
            android:layout_marginLeft="16sp" />
        <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView
            android:id="@+id/tv_removo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21sp"
            android:text="@string/tv_remove"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_rate_aps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_remove"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <ImageView
            android:id="@+id/img_icon_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:src="@drawable/ic_star" />
        <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView
            android:id="@+id/tv_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21sp"
            android:text="@string/tv_rate_app"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_rate_aps"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <ImageView
            android:id="@+id/img_icon_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:src="@drawable/ic_shaer" />
        <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView

            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21sp"
            android:text="@string/tv_share_app"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_share_app"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <ImageView
            android:id="@+id/img_icon_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:src="@drawable/ic_notification"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView

            android:id="@+id/tv_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/tv_notification"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/img_icon_notification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sw_notificaiton"/>
<!--        <Switch-->
<!--            android:checked="true"-->
<!--            android:id="@+id/sw_notificaiton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginRight="6sp"-->
<!--            app:layout_constraintStart_toEndOf="@id/tv_notification"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"/>-->
        <androidx.appcompat.widget.SwitchCompat
            android:checked="true"
            android:id="@+id/sw_notificaiton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16sp"

            app:layout_constraintStart_toEndOf="@id/tv_notification"
            app:layout_constraintTop_toTopOf="@id/tv_notification"
            app:layout_constraintBottom_toBottomOf="@id/tv_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:track="@drawable/custom_track"
            android:thumb="@drawable/custom_thumb"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_notification1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_notification"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <ImageView
            android:id="@+id/img_icon_notification1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:src="@drawable/ic_note" />
        <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView

            android:id="@+id/tv_notification1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21sp"
            android:text="@string/tv_notification"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_notification1"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <ImageView
            android:id="@+id/img_icon_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:src="@drawable/ic_call" />
        <com.example.fingerprintscandailytarot.custom_textview.RestoraTextView

            android:id="@+id/tv_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21sp"
            android:text="@string/tv_contact_us"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>



<!--    <Button-->
<!--        android:id="@+id/btn_test"-->
<!--        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingLeft="16dp"-->

<!--        android:gravity="left|center"-->
<!--        android:text="@string/tv_contact_us"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->

<!--        app:icon="@drawable/ic_call"-->
<!--        app:iconPadding="16dp"-->

<!--        app:iconTint="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/ll_contact_us" />-->
<!--    <Button-->
<!--        android:id="@+id/btn_test1"-->
<!--        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingLeft="16dp"-->
<!--        android:gravity="left|center"-->
<!--        android:text="@string/tv_contact_us"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->

<!--        app:icon="@drawable/ic_call"-->
<!--        app:iconPadding="16dp"-->

<!--        app:iconTint="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btn_test" />-->
</androidx.constraintlayout.widget.ConstraintLayout>